--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,15 +10,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t asgrm/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true asgrm/react-test npm test
+      - run: docker build -t andriigromakov/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true andriigromakov/react-test npm test
 
-      - run: docker build -t asgrm/multi-client ./client
-      - run: docker build -t asgrm/multi-nginx ./nginx
-      - run: docker build -t asgrm/multi-server ./server
-      - run: docker build -t asgrm/multi-worker ./worker
+      - run: docker build -t andriigromakov/multi-client ./client
+      - run: docker build -t andriigromakov/multi-nginx ./nginx
+      - run: docker build -t andriigromakov/multi-server ./server
+      - run: docker build -t andriigromakov/multi-worker ./worker
 
-      - run: docker push asgrm/multi-client
-      - run: docker push asgrm/multi-nginx
-      - run: docker push asgrm/multi-server
-      - run: docker push asgrm/multi-worker
+      - run: docker push andriigromakov/multi-client
+      - run: docker push andriigromakov/multi-nginx
+      - run: docker push andriigromakov/multi-server
+      - run: docker push andriigromakov/multi-worker
